[project]
name = "dictf"
version = "1.0.0"
description = "An extended Python dict implementation that supports multiple key selection with a pretty syntax."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["data structures", "data", "dict", "map"]
authors = [
  {name = "Eric Mendes", email = "ericvelasco.2000@gmail.com" },
]
maintainers = [
  {name = "Eric Mendes", email = "ericvelasco.2000@gmail.com" }
]
classifiers = [  
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.optional-dependencies] 
dev = ["black"]

[project.urls]  
"Homepage" = "https://github.com/Eric-Mendes/dictf"
"Bug Reports" = "https://github.com/Eric-Mendes/dictf/issues"
"Source" = "https://github.com/Eric-Mendes/dictf"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
